<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/label_vendor_report_name"
            android:textColor="@color/bg_main" />

        <TextView
            android:layout_width="@dimen/vendor_report_values_columns"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_vendor_report_goal"
            android:textColor="@color/bg_main" />

        <TextView
            android:layout_width="@dimen/vendor_report_values_columns"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_vendor_report_real"
            android:textColor="@color/bg_main" />

        <TextView
            android:layout_width="@dimen/vendor_report_values_column_cump"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_vendor_report_percent"
            android:textColor="@color/bg_main" />
    </LinearLayout>

    <include layout="@layout/base_horizontal_line" />

    <ListView
        android:id="@+id/listView_tabular"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1" >
    </ListView>

</LinearLayout>